@@ -1,12 +1,20 @@
 package core.oom;
 
 /**
-  * VM Argument :
-  * -XX:+HeapDumpOnOutOfMemoryError
-  * -XX:HeapDumpPath=c:/temp
+  VM Argument :
+  -Xmx256m
+  -XX:-UseGCOverheadLimit
+  -XX:+HeapDumpOnOutOfMemoryError -verbose:gc
+  -XX:+PrintGCDetails
+  -XX:+PrintGCTimeStamps
+  -Xloggc:gc.log
+  -XX:HeapDumpPath=c:\temp
  */
 public class OOM {
-        public static void main(String[] args) {
-                char[] oom = new char[999999999];
-        }
+    public static void main(String[] args) {
+        do {
+            long[] oom = new long[999999999];
+            System.out.println("args = [" + args + "]");
+        } while (true);
+    }
 }
